Updated linear regression

--- a/basics/linear_regression.ipynb
+++ b/basics/linear_regression.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Same can be done by pytorch modules"
+    "Same can be done by $\\text{PyTorch}$ modules."
    ]
   },
   {
@@ -116,6 +116,13 @@
     "        w, b = model.parameters()\n",
     "        print(f'epoch: {epoch:04d}/{n_epochs}\\tw: {w.item():.3f}\\tb: {b.item():.3f}\\tloss: {loss.item():.6f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Reference](https://wikidocs.net/53560)"
+   ]
   }
  ],
  "metadata": {
@@ -127,16 +134,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": ""
   },
   "orig_nbformat": 4
  },
