Updated number of wonderful substrings

--- a/basics/multivariate_linear_regression.ipynb
+++ b/basics/multivariate_linear_regression.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,18 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 10000/50000\tW: [1.126, 0.675, 0.220]\tb: 0.027\tloss: 0.264467\n",
-      "epoch: 20000/50000\tW: [1.209, 0.657, 0.154]\tb: 0.021\tloss: 0.114807\n",
-      "epoch: 30000/50000\tW: [1.223, 0.653, 0.145]\tb: 0.014\tloss: 0.110714\n",
-      "epoch: 40000/50000\tW: [1.225, 0.652, 0.144]\tb: 0.007\tloss: 0.110098\n",
-      "epoch: 50000/50000\tW: [1.225, 0.652, 0.143]\tb: -0.000\tloss: 0.109575\n"
+      "epoch: 10000/50000\tW: [1.108, 0.684, 0.232]\tb: -0.215\tloss: 0.314596\n",
+      "epoch: 20000/50000\tW: [1.209, 0.659, 0.155]\tb: -0.220\tloss: 0.099705\n",
+      "epoch: 30000/50000\tW: [1.226, 0.653, 0.144]\tb: -0.226\tloss: 0.094054\n",
+      "epoch: 40000/50000\tW: [1.228, 0.652, 0.143]\tb: -0.233\tloss: 0.093484\n",
+      "epoch: 50000/50000\tW: [1.229, 0.652, 0.143]\tb: -0.239\tloss: 0.093049\n"
      ]
     }
    ],
@@ -135,8 +135,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "orig_nbformat": 4
  },
