Updated logistic regression

--- a/basics/logistic_regression.ipynb
+++ b/basics/logistic_regression.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "For binary classification problems, we could use a sigmoid function:\n",
-    "$$ H(x) = sigmoid(wx + b) = \\frac{1}{1 + \\exp^{-(wx + b)}} $$"
+    "$$ H(x) = sigmoid(wx + b) = \\frac{1}{1 + e^{-(wx + b)}} $$"
    ]
   },
   {
