Updated softmax regression

--- a/basics/softmax_regression.ipynb
+++ b/basics/softmax_regression.ipynb
@@ -50,10 +50,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\text{Softmax}:\\\\$\n",
+    "$\\text{Softmax}:$\n",
     "The softmax function, also known as softargmax or normalized exponential function, is a generalization of the logistic function to multiple dimensions. It is used in multinomial logistic regression and is often used as the last activation function of a neural network to normalize the output of a network to a probability distribution over predicted output classes, based on Luce's choice axiom.\n",
     "$$p_i = \\sigma(\\bold{z})_{i} = \\frac{e^{z_i}}{\\sum^K_{j=1}e^{z_j}} $$\n",
-    "$\\text{Cross-Entropy}:\\\\$\n",
+    "$\\text{Cross-Entropy}:$\n",
     "$$ \\text{Cost}(W) = -\\frac{1}{n}\\sum^n_{i=1}\\sum^k_{j = 1} y^{(i)}_j \\log(p^{(i)}_j) $$"
    ]
   },
