--- a/basics/softmax_regression.ipynb
+++ b/basics/softmax_regression.ipynb
@@ -148,9 +148,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "References:$\\\\$\n",
-    "[소프트맥스 회귀(Softmax Regression) 이해하기](https://wikidocs.net/59427)$\\\\$\n",
-    "[소프트맥스 회귀 구현하기](https://wikidocs.net/60575)$\\\\$\n",
+    "References:$\\newline$\n",
+    "[소프트맥스 회귀(Softmax Regression) 이해하기](https://wikidocs.net/59427)$\\newline$\n",
+    "[소프트맥스 회귀 구현하기](https://wikidocs.net/60575)$\\newline$\n",
     "[Softmax function](https://en.wikipedia.org/wiki/Softmax_function)"
    ]
   },
