Updated MNIST classification

--- a/MNIST_classification.ipynb
+++ b/MNIST_classification.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('CUDA' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "batch_size = 100\n",
     "n_epochs = 15"
    ]
