Updated multilayer perceptron

--- a/basics/multilayer_perceptron.ipynb
+++ b/basics/multilayer_perceptron.ipynb
@@ -111,6 +111,13 @@
     "    accuracy = (predictions.round() == targets).float().mean()\n",
     "    print(f'accuracy: {accuracy.item()}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Reference](https://wikidocs.net/61010)"
+   ]
   }
  ],
  "metadata": {
@@ -122,16 +129,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": ""
   },
   "orig_nbformat": 4
  },
