Updated MNIST multi-layer

--- a/MNIST_multi-layer.ipynb
+++ b/MNIST_multi-layer.ipynb
@@ -183,6 +183,13 @@
     "print(f'accuracy: {pre_accuracy:.2f}% -> {test():.2f}%')\n",
     "check()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Reference](https://wikidocs.net/61073)"
+   ]
   }
  ],
  "metadata": {
