Work in progress

--- a/CartPole_DQN.ipynb
+++ b/CartPole_DQN.ipynb
@@ -255,6 +255,13 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "[Reference](https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html)"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
