Work in progress

--- a/CartPole_CNN_DQN.ipynb
+++ b/CartPole_CNN_DQN.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "env = gym.make('CartPole-v0')\n",
+    "env = gym.make('CartPole-v1')\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
    "outputs": [],
@@ -144,7 +144,7 @@
     "target_net.load_state_dict(state_dict=policy_net.state_dict())\n",
     "target_net.eval()\n",
     "\n",
-    "optimizer = optim.RMSprop(policy_net.parameters())\n",
+    "optimizer = optim.Adam(policy_net.parameters(), lr=5e-4)\n",
     "memory = ReplayMemory(10000)\n",
     "\n",
     "batch_size = 32\n",
@@ -156,7 +156,8 @@
     "\n",
     "def select_action(state, episode):\n",
     "    sample = random.random()\n",
-    "    eps_threshold = eps_end + (eps_start - eps_end) * math.exp(-1 * episode / eps_decay)\n",
+    "    # eps_threshold = eps_end + (eps_start - eps_end) * math.exp(-1 * episode / eps_decay)\n",
+    "    eps_threshold = max(eps_end, eps_start - 0.01 * (episode / 200))\n",
     "    if sample > eps_threshold:\n",
     "        with torch.no_grad():\n",
     "            return policy_net(state).argmax(dim=1).view(1, 1)\n",
