Work in progress

--- a/RL/CartPole_DDPG.ipynb
+++ b/RL/CartPole_DDPG.ipynb
@@ -49,7 +49,7 @@
     "        self.q = mlp(layer_config, activation)\n",
     "\n",
     "    def forward(self, state, action):\n",
-    "        return self.q(torch.cat([state, action])).squeeze(-1)\n",
+    "        return self.q(torch.cat([state, action], dim=-1))\n",
     "\n",
     "class ActorCritic(nn.Module):\n",
     "    def __init__(self, state_dim, action_dim=1, hidden_layer_config=(128, 128), activation=nn.ReLU):\n",
@@ -70,7 +70,7 @@
    "source": [
     "Transition = namedtuple(\n",
     "    typename='Transtiion',\n",
-    "    field_names=('state', 'action', 'reward', 'next_state')\n",
+    "    field_names=('state', 'action', 'reward', 'next_state', 'done')\n",
     ")\n",
     "\n",
     "class ReplayBuffer:\n",
@@ -79,8 +79,8 @@
     "    \n",
     "    def push(self, *args):\n",
     "        def transform(data):\n",
-    "            data = torch.tensor(data)\n",
-    "            return data if data.ndim > 1 else data.view(-1, 1)\n",
+    "            data = torch.tensor(data).float()\n",
+    "            return data if data.ndim > 1 else data.view(1, -1)\n",
     "        self.buffer.append(Transition(*map(transform, args)))\n",
     "    \n",
     "    def sample(self, batch_size=32):\n",
@@ -131,22 +131,17 @@
     "replay_buffer = ReplayBuffer(capacity=buffer_capacity)\n",
     "\n",
     "def get_q_loss(data: Transition):\n",
-    "    state = data.state\n",
-    "    action = data.action\n",
-    "    reward = data.reward\n",
-    "    next_state = data.next_state\n",
-    "\n",
-    "    q = ac.critic(state, action)\n",
+    "    done_mask = torch.ones_like(data.done) - data.done\n",
+    "    q = ac.critic(data.state, data.action)\n",
     "    with torch.no_grad():\n",
-    "        q_prime = target_ac.critic(next_state, target_ac.actor(next_state))\n",
-    "        bellman_backup = reward + (next_state is not None) * gamma * q_prime\n",
+    "        q_prime = target_ac.critic(data.next_state, target_ac.actor(data.next_state))\n",
+    "        bellman_backup = data.reward + done_mask * gamma * q_prime\n",
     "    \n",
     "    return F.mse_loss(q, bellman_backup)\n",
     "\n",
     "def get_policy_loss(data: Transition):\n",
-    "    state, action = data.state, data.action\n",
-    "    q = ac.critic(state, action)\n",
-    "    return -q.mean() # Lower state-action value has higher loss\n",
+    "    q = ac.critic(data.state, ac.actor(data.state))\n",
+    "    return -q.mean() # Lower state-action value represents higher loss of action\n",
     "\n",
     "q_optimizer = optim.Adam(ac.critic.parameters(), lr=lr_q)\n",
     "policy_optimizer = optim.Adam(ac.actor.parameters(), lr=lr_policy)\n",
@@ -176,7 +171,7 @@
     "def get_action(state, noise_scale):\n",
     "    action = ac.actor(state)\n",
     "    action += noise_scale * random.randrange(n_actions)\n",
-    "    return torch.clip(action, min=0, max=n_actions - 1).round().long()\n",
+    "    return torch.clip(action, min=0, max=n_actions - 1).round().long().item()\n",
     "\n",
     "\n",
     "durations = []\n",
@@ -185,13 +180,12 @@
     "\n",
     "    for t in count(1):\n",
     "        if len(replay_buffer) > prelearning_steps:\n",
-    "            action = get_action(state, noise_scale=action_noise)\n",
+    "            action = get_action(torch.from_numpy(state).float(), noise_scale=action_noise)\n",
     "        else:\n",
     "            action = env.action_space.sample()\n",
     "        \n",
     "        next_state, reward, done, _ = env.step(action)\n",
-    "        # replay_buffer.push(state, action, reward, None if done else next_state)\n",
-    "        replay_buffer.push(state, action, reward, next_state)\n",
+    "        replay_buffer.push(state, action, reward, next_state, done)\n",
     "        state = next_state\n",
     "\n",
     "        if len(replay_buffer) > prelearning_steps:\n",
